--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
     "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^7.0.3",
     "css-loader": "^5.0.1",
+    "eslint": "^7.21.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-prettier": "^3.3.1",
     "file-loader": "^6.2.0",
     "html-loader": "^1.3.2",
     "html-webpack-plugin": "^5.1.0",
@@ -25,6 +30,7 @@
     "postcss": "^8.2.4",
     "postcss-loader": "^4.1.0",
     "postcss-preset-env": "^6.7.0",
+    "prettier": "^2.2.1",
     "sass": "^1.32.4",
     "sass-loader": "^10.1.1",
     "webpack": "^5.11.1",
